fix: alignment + adding SXX indicators

--- a/src/components/landing/landing.module.sass
+++ b/src/components/landing/landing.module.sass
@@ -1,4 +1,5 @@
 .landing
+  position: relative
   height: 66vh
   width: 100%
   display: flex
@@ -13,6 +14,24 @@
     height: 100%
     width: auto
     color: currentColor
+
+.bottomBar
+  position: absolute
+  bottom: 0
+  right: 0
+  display: inline-flex
+  align-items: flex-start
+  justify-content: flex-end
+  gap: 2rem
+  padding: 1rem var(--spacing-sides )
+  // Font
+  p
+    font-family: var(--font-space-mono), monospace
+    font-size: 0.75rem
+    color: currentColor
+    font-weight: 400
+    line-height: 1.4
+    text-transform: uppercase
 
 .circleContainer
   position: relative
