--- a/src/components/section-ohio/section-ohio.module.sass
+++ b/src/components/section-ohio/section-ohio.module.sass
@@ -20,7 +20,6 @@
     flex-grow: 1
     align-items: flex-start
     justify-content: space-between
-    align-items: center
     // Font
     p
       font-family: var(--font-space-mono), monospace
